Fixes #658